# rust-wasm-ai-demo

./: Cargo.toml  README.md
.devcontainer/: Dockerfile
node/: server.js
node/public/: index.html
src/: lib.rs
