[package]
name = "markov-demo"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[lib]
name = "markov_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
markov = { git = "https://github.com/chocol4te/markov.git", branch = "stable" }
